[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markflow"
version = "1.0.0"
authors = [
    { name="Raja Namdeo", email="cse.rajanamdeo@gmail.com" },
]
description = "Modern Markdown to PDF Converter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
]

dependencies = [
    "markdown>=3.4.3",
    "weasyprint>=59.0",
    "click>=8.1.3",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.4.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/raja-namdeo/markflow"
"Bug Tracker" = "https://github.com/raja-namdeo/markflow/issues"
"Documentation" = "https://markflow.readthedocs.io/"

[project.scripts]
markflow = "md_to_pdf.cli:cli"
markflow-gui = "md_to_pdf.gui.main:main [gui]"
